<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/quantity_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

    <ViewSwitcher
        android:id="@+id/quantity_view_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/quantity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/quantity_array" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="@string/action_done"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:text="@string/quantity_initial_value" />

    </ViewSwitcher>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/toppings_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/no_topping_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_topping_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/toppings_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="true"
            android:scrollbars="none"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/item_note_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/note_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:hint="@string/edit_note_hint"
            android:maxLines="2"
            android:paddingEnd="30dp"
            android:paddingLeft="0dp"
            android:paddingRight="30dp"
            android:paddingStart="0dp"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body"
            android:textColorHint="@color/text_hint" />

        <ImageButton
            android:id="@+id/note_clear_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|end"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_edit_text_clear"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>