<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mojoteahouse.mojotea.activity.ViewOrderItemActivity">

    <include layout="@layout/edit_item_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quantity_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/toppings_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

        <TextView
            android:id="@+id/no_topping_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/no_topping_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/topping_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/item_note_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

        <TextView
            android:id="@+id/note_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body" />

    </LinearLayout>

</LinearLayout>
