<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.mojoteahouse.mojotea.fragment.CartCustomerDetailFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Hint">

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/name_hint"
                    android:imeActionLabel="@string/action_next"
                    android:imeOptions="actionNext"
                    android:maxLines="2"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/name_clear_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_edit_text_clear"
                android:visibility="gone" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Hint">

                <EditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/address_hint"
                    android:imeActionLabel="@string/action_next"
                    android:imeOptions="actionNext"
                    android:maxLines="3"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/address_clear_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_edit_text_clear"
                android:visibility="gone" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Hint">

                <EditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/phone_hint"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/phone_clear_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_edit_text_clear"
                android:visibility="gone" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/deliver_time_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/text_normal"
                android:textSize="18sp" />

            <Button
                android:id="@+id/time_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/accent"
                android:textSize="18sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/note_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Hint">

                <EditText
                    android:id="@+id/note_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/note_hint"
                    android:maxLines="3"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/note_clear_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_edit_text_clear"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>
